Made 3rd page a static image

--- a/rin/anime.html
+++ b/rin/anime.html
@@ -110,28 +110,12 @@
       <!-- Text is cropped (bad) example -->
       <amp-story-page id="page3">
         <amp-story-grid-layer template="fill">
-          <amp-video autoplay loop
-                width="720" height="1280"
-                poster="rin.jpg"
-                layout="responsive">
-              <source src="rin.mp4" type="video/mp4">
-          </amp-video>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical">
-          <h1>Rin</h1>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="fill">
-          <div style="padding-top: 50px; width: 70%;">
             <amp-img
-                src="speech.png"
-                width="1337"
-                height="817"
+                src="rin-bad.png"
+                width="860"
+                height="1284"
                 layout="responsive"
                 alt="Hmmm, that sounds like something Deb told me recently." />
-          </div>
-        </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="bottom">
-          <p>This is Rin and this text demonstrates how wrapping can occurr nicely if entered as normal text.</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
