Improvements and poster images per page.

--- a/vseries1/Ep1/Ep1.html
+++ b/vseries1/Ep1/Ep1.html
@@ -61,14 +61,14 @@
     <amp-story standalone
         title="Extra Ordinary Episode 1"
         publisher="Alan Kent"
-        publisher-logo-src="extra-ordinary-logo.jpg"
+        publisher-logo-src="extra-ordinary-logo.png"
         poster-portrait-src="Ep1-cover.jpg">
 
       <amp-story-page id="page1" auto-advance-after="ep1-seq10">
         <amp-story-grid-layer template="fill">
           <amp-video autoplay id="ep1-seq10" 
                 width="720" height="1280"
-                poster="todo.jpg"
+                poster="Ep1-Seq10-poster.jpg"
                 layout="responsive">
               <source src="Video-Ep1-Seq10.mp4" type="video/mp4">
           </amp-video>
@@ -79,7 +79,7 @@
         <amp-story-grid-layer template="fill">
           <amp-video autoplay id="ep1-seq20" 
                 width="720" height="1280"
-                poster="todo.jpg"
+                poster="Ep1-Seq20-poster.png"
                 layout="responsive">
               <source src="Video-Ep1-Seq20.mp4" type="video/mp4">
           </amp-video>
@@ -90,7 +90,7 @@
         <amp-story-grid-layer template="fill">
           <amp-video autoplay id="ep1-seq40" 
                 width="720" height="1280"
-                poster="todo.jpg"
+                poster="Ep1-Seq40-poster.jpg"
                 layout="responsive">
               <source src="Video-Ep1-Seq40.mp4" type="video/mp4">
           </amp-video>
@@ -101,7 +101,7 @@
         <amp-story-grid-layer template="fill">
           <amp-video autoplay id="ep1-seq30" 
                 width="720" height="1280"
-                poster="todo.jpg"
+                poster="Ep1-Seq30-poster.png"
                 layout="responsive">
               <source src="Video-Ep1-Seq30.mp4" type="video/mp4">
           </amp-video>
@@ -109,7 +109,7 @@
       </amp-story-page>
 
       <!-- Bookend -->
-      <amp-story-bookend src="bookend.json" layout="nodisplay"></amp-story-bookend>
+      <amp-story-bookend src="Ep1-bookend.json" layout="nodisplay"></amp-story-bookend>
     </amp-story>
   </body>
 </html>
