Removed auto advance

--- a/vseries1/Ep1/Ep1back.html
+++ b/vseries1/Ep1/Ep1back.html
@@ -64,7 +64,7 @@
         publisher-logo-src="extra-ordinary-logo.png"
         poster-portrait-src="Ep1-cover.jpg">
 
-      <amp-story-page id="page1" auto-advance-after="ep1-seq10">
+      <amp-story-page id="page1">
         <amp-story-grid-layer preset="2021-background" aspect-ratio="720:1280" template="fill">
           <amp-video autoplay id="ep1-seq10" 
                 width="720" height="1280"
@@ -75,7 +75,7 @@
         </amp-story-grid-layer>
       </amp-story-page>
 
-      <amp-story-page id="page2" auto-advance-after="ep1-seq20">
+      <amp-story-page id="page2">
         <amp-story-grid-layer preset="2021-background" aspect-ratio="720:1280" template="fill">
           <amp-video autoplay id="ep1-seq20" 
                 width="720" height="1280"
@@ -86,7 +86,7 @@
         </amp-story-grid-layer>
       </amp-story-page>
 
-      <amp-story-page id="page3" auto-advance-after="ep1-seq40">
+      <amp-story-page id="page3">
         <amp-story-grid-layer preset="2021-background" aspect-ratio="720:1280" template="fill">
           <amp-video autoplay id="ep1-seq40" 
                 width="720" height="1280"
@@ -97,7 +97,7 @@
         </amp-story-grid-layer>
       </amp-story-page>
 
-      <amp-story-page id="page4" auto-advance-after="ep1-seq30">
+      <amp-story-page id="page4">
         <amp-story-grid-layer preset="2021-background" aspect-ratio="720:1280" template="fill">
           <amp-video autoplay id="ep1-seq30" 
                 width="720" height="1280"
