--- a/vseries1/uep1/index.html
+++ b/vseries1/uep1/index.html
@@ -2,7 +2,7 @@
 <html amp>
   <head>
     <meta charset="utf-8">
-    <title>Web Story Storyboard Template</title>
+    <title>Episode 1, Friendship</title>
     <link rel="canonical" href="index.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -19,28 +19,101 @@
   </head>
   <body>
     <amp-story standalone
-        title="Web Story Storyboard Template"
+        title="Episode 1, Friendship"
         publisher="Alan Kent"
         publisher-logo-src="https://example.com/publisher-logo-96x96.png"
-        poster-portrait-src="poster-portrait.png"
-        poster-landscape-src="poster-landscape.png"
-        poster-square-src="poster-square.png">
-      <amp-story-page id="page-01">
+        poster-portrait-src="ep1-10-010.jpg"
+        poster-square-src="ep1-10-010.jpg">
+      <amp-story-page id="ep1-10-010">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-1-1-1.mp4" width="868" height="1462" layout="fill"></amp-img>
+          <amp-video src="ep1-10-010.mp4" poster="ep1-10-010.jpg" width="868" height="1462" layout="fill"></amp-img>
         </amp-story-grid-layer>
       </amp-story-page>
-      <amp-story-page id="page-02">
+      <amp-story-page id="ep1-10-015">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-1-2-1.mp4" width="868" height="1462" layout="fill"></amp-img>
+          <amp-img src="ep1-10-015.jpg" width="868" height="1462" layout="fill"></amp-img>
         </amp-story-grid-layer>
       </amp-story-page>
-      <amp-story-page id="page-03">
+      <amp-story-page id="ep1-10-020">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-1-2-2.mp4" width="868" height="1462" layout="fill"></amp-img>
+          <amp-video src="ep1-10-020.mp4" poster="ep1-10-020.jpg" width="868" height="1462" layout="fill"></amp-img>
         </amp-story-grid-layer>
       </amp-story-page>
-
-    </amp-story>
+      <amp-story-page id="ep1-10-030">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-030.mp4" poster="ep1-10-030.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-040">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-040.mp4" poster="ep1-10-040.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-050">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-050.mp4" poster="ep1-10-050.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-060">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-060.mp4" poster="ep1-10-060.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-070">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-070.mp4" poster="ep1-10-070.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-080">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-080.mp4" poster="ep1-10-080.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-090">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-090.mp4" poster="ep1-10-090.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-100">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-100.mp4" poster="ep1-10-100.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-110">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-110.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-120">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-120.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-130">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-130.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-140">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-140.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-150">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-150.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-160">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-160.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-170">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-170.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+   </amp-story>
   </body>
 </html>
