--- a/vseries1/uep1/index.html
+++ b/vseries1/uep1/index.html
@@ -29,13 +29,6 @@
           <amp-video src="ep1-10-010.mp4" poster="ep1-10-010.jpg" width="868" height="1462" layout="fill"></amp-img>
         </amp-story-grid-layer>
       </amp-story-page>
-      <!--
-      <amp-story-page id="ep1-10-015">
-        <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-img src="ep1-10-015.jpg" width="868" height="1462" layout="fill"></amp-img>
-        </amp-story-grid-layer>
-      </amp-story-page>
--->
       <amp-story-page id="ep1-10-020">
         <amp-story-grid-layer preset="2021-background" template="fill">
           <amp-video src="ep1-10-020.mp4" poster="ep1-10-020.jpg" width="868" height="1462" layout="fill"></amp-img>
@@ -69,6 +62,11 @@
       <amp-story-page id="ep1-10-080">
         <amp-story-grid-layer preset="2021-background" template="fill">
           <amp-video src="ep1-10-080.mp4" poster="ep1-10-080.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="ep1-10-085">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-video src="ep1-10-085.mp4" poster="ep1-10-085.jpg" width="868" height="1462" layout="fill"></amp-img>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-090">
