--- a/vseries1/uep1/index.html
+++ b/vseries1/uep1/index.html
@@ -26,7 +26,7 @@
         poster-square-src="ep1-10-010.jpg">
       <amp-story-page id="ep1-10-010">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-010.mp4" poster="ep1-10-010.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-010.mp4" poster="ep1-10-010.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
         <amp-story-grid-layer preset="2021-background" template="fill">
           <amp-img animate-in="fade-in" animate-in-delay="6s" src="nav-start.png" width="868" height="1462" layout="fill"></amp-img>
@@ -34,7 +34,7 @@
       </amp-story-page>
       <amp-story-page id="ep1-10-020">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-020.mp4" poster="ep1-10-020.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-020.mp4" poster="ep1-10-020.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
         <amp-story-grid-layer preset="2021-background" template="fill">
           <amp-img animate-in="fade-in" animate-in-delay="1s" src="nav-start.png" width="868" height="1462" layout="fill"></amp-img>
@@ -42,7 +42,7 @@
       </amp-story-page>
       <amp-story-page id="ep1-10-030">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-030.mp4" poster="ep1-10-030.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-030.mp4" poster="ep1-10-030.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
         <amp-story-grid-layer preset="2021-background" template="fill">
           <amp-img animate-in="fade-in" animate-in-delay="1s" src="fade.png" width="868" height="1462" layout="fill"></amp-img>
@@ -50,7 +50,7 @@
       </amp-story-page>
       <amp-story-page id="ep1-10-040">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-040.mp4" poster="ep1-10-040.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-040.mp4" poster="ep1-10-040.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
         <amp-story-grid-layer preset="2021-background" template="fill">
           <amp-img animate-in="fade-in" animate-in-delay="1.5s" src="fade.png" width="868" height="1462" layout="fill"></amp-img>
@@ -58,37 +58,37 @@
       </amp-story-page>
       <amp-story-page id="ep1-10-050">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-050.mp4" poster="ep1-10-050.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-050.mp4" poster="ep1-10-050.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-060">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-060.mp4" poster="ep1-10-060.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-060.mp4" poster="ep1-10-060.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-070">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-070.mp4" poster="ep1-10-070.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-070.mp4" poster="ep1-10-070.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-080">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-080.mp4" poster="ep1-10-080.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-080.mp4" poster="ep1-10-080.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-085">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-085.mp4" poster="ep1-10-085.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-085.mp4" poster="ep1-10-085.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-090">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-090.mp4" poster="ep1-10-090.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-090.mp4" poster="ep1-10-090.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-100">
         <amp-story-grid-layer preset="2021-background" template="fill">
-          <amp-video src="ep1-10-100.mp4" poster="ep1-10-100.jpg" width="868" height="1462" layout="fill"></amp-video>
+          <amp-video autoplay src="ep1-10-100.mp4" poster="ep1-10-100.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="ep1-10-110">
