--- a/vseries1/uep1/index.html
+++ b/vseries1/uep1/index.html
@@ -62,6 +62,13 @@
           <amp-video autoplay src="ep1-10-050.mp4" poster="ep1-10-050.jpg" width="868" height="1462" layout="fill"></amp-video>
         </amp-story-grid-layer>
       </amp-story-page>
+      
+      <amp-story-page id="STATIC-TEST-PAGE">
+        <amp-story-grid-layer preset="2021-background" template="fill">
+          <amp-img src="ep1-10-150.jpg" width="868" height="1462" layout="fill"></amp-img>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
       <amp-story-page id="ep1-10-060">
         <amp-story-grid-layer preset="2021-background" template="fill">
           <amp-video autoplay src="ep1-10-060.mp4" poster="ep1-10-060.jpg" width="868" height="1462" layout="fill"></amp-video>
